--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ setTimeout(() => {
 </script>
 
 <!-- Load data dari Blogger API untuk POSTS -->
-<script src="https://www.blogger.com/feeds/1551462197112272688/posts/default?alt=json-in-script&callback=showPosts"></script>
+<script src="https://github.com/template-zany/template-blogger"></script>
 
 <style>
 /* Bungkus utama */
